--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "start": "node server.js"
   },
-  "name": "same_port",
+  "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
