--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "start": "node backend/server.js",
-    "build" : "npm install --legacy-peer-deps && npm --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
+    "build" : "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "name": "backend",
   "version": "1.0.0",
